--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "grunt-ts": "^5.4.0",
     "grunt-tslint": "^3.1.0",
     "tslint": "^3.7.4"
+  },
+  "dependencies": {
+    "connect": "^3.4.1",
+    "serve-static": "^1.11.1"
   }
 }
